[package]
name = "ascii-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Szyller <contact@sebszyller.com>"]
description = "Quickly convert images to ascii (art)."

[lints.rust]
unused = "allow"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features=["derive"] }
colored = "3.0.0"
image = "0.25.5"
imageproc = "0.25.0"
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"]}
